<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoapp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/bannerlogo" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_below="@id/logoapp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/boton2"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif"
        android:text="@string/inicia_sesi_n"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/boton2"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif"
        android:text="@string/nuevo_usuario"
        android:textAllCaps="false"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cinesbtn"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/botonsinrelleno"
        android:fontFamily="sans-serif"
        android:text="@string/cines_cercanos"
        android:textColor="#242c86"
        android:textAllCaps="false"
        android:layout_below="@id/registerbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="20sp" />


</RelativeLayout>